# litlog

./: .gitignore  CMakeLists.txt  LICENSE  litlog_config.cc  litlog_format.cc  litlog_print.cc  litlogger.cc  litlogger_factory.cc  log_format_handler.cc  log_print_handler.cc
config/: log_config.json
include/: litlog_config.h  litlog_format.h  litlog_print.h  litlogger.h  litlogger_factory.h  log_format.h  log_format_handler.h  log_print.h  log_print_handler.h
tests/: log_test.cc
